소개영상, 규칙 제외 개발 완료

--- a/prwebsite/templates/lion/index.html
+++ b/prwebsite/templates/lion/index.html
@@ -6,7 +6,8 @@
 <head>
     <meta charset="UTF-8">
     <link rel="stylesheet" href="{% static 'lion/css/event.css' %}">
-    <link rel='stylesheet' href="{% static 'lion/css/index.css'%}"> 
+    <link rel='stylesheet' href="{% static 'lion/css/index.css'%}">
+    <link rel='stylesheet' href="{% static 'lion/css/info.css'%}">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+KR&display=swap" rel="stylesheet">
@@ -28,24 +29,36 @@
         <div class="info">
             <div class="introduce">
                 <p class="title">멋쟁이 사자처럼이 무엇인가요?</p>
-                <p>
-                    "HACK YOUR LIFE 내 아이디어를 내 손으로 실현한다"의 가치 아래에서 <br>
-                    시작된 전국 연합 동아리 멋쟁이 사자처럼. <br>
-                    <br>
-                    멋쟁이 사자처럼은 자신만의 아이디어를 코딩을 통해 구현해나가는 프로그래밍 동아리입니다. <br>
-                    우리 멋쟁이 사자처럼 성공회대학교는 2022년을 함께 나아갈 아기사자를 찾고 있습니다. <br>
-                    멋쟁이 사자처럼에서 함께 성장할 아기사자를 모집합니다 !
-                </p>
+                <div class="info_box">
+                    <img src="https://skhu-likelion-9th.github.io/likeInformative_Lion/images/slide%201.jpg" alt="코드">
+                    <p class="border">
+                        "HACK YOUR LIFE 내 아이디어를 내 손으로 실현한다"의 가치 아래에서 <br>
+                        시작된 전국 연합 동아리 멋쟁이 사자처럼. <br>
+                        <br>
+                        ‛멋쟁이 사자처럼’은 자신이 생각했던 아이디어를 구체화하고 프로그래밍 교육을 통해 <br>
+                        웹서비스 구현을 목표로 활동하는 전국 연합동아리 입니다. <br>
+                        웹 프로그래밍에 대해 전혀 모르는 비전공자도, 코딩을 처음 접해보는 신입생도 <br>
+                        멋쟁이가 될 수 있도록 사자처럼 강하게 키워드리겠습니다. <br>
+                        <br>
+                        우리 멋쟁이 사자처럼 성공회대학교는 2022년을 함께 나아갈 아기사자를 찾고 있습니다. <br>
+                        멋쟁이 사자처럼에서 함께 성장할 아기사자를 모집합니다 !
+                    </p>
+                </div>
+                <img src="static/info/star.png" alt="별">
             </div>
 
             <div class="recruit">
                 <p class="title">모집대상</p>
-                <p>
-                    전공자/비전공자 상관없이 나의 아이디어를 웹 서비스를 구현해보고 싶은 누구나! <br>
-                    해커톤과 넥슨 MOD를 통해 개발 경험을 쌓아보고 싶은 누구나! <br>
-                    Django와 Python을 통한 웹 서비스를 구축해보고 싶은 누구나! <br>
-                    멋쟁이 사자처럼 성공회대학교가 기다리고 있습니다 🦁
-                </p>
+                <div class="recruit_box">
+                    <img src="https://skhu-likelion-9th.github.io/likeInformative_Lion/images/slide%202.jpg" alt="코드2">
+                    <p>
+                        전공자/비전공자 상관없이 나의 아이디어를 웹 서비스를 구현해보고 싶은 누구나! <br>
+                        해커톤과 넥슨 MOD를 통해 개발 경험을 쌓아보고 싶은 누구나! <br>
+                        Django와 Python을 통한 웹 서비스를 구축해보고 싶은 누구나! <br>
+                        <br>
+                        멋쟁이 사자처럼 성공회대학교가 기다리고 있습니다 🦁
+                    </p>
+                </div>
             </div>
 
             <div class="schedule">
@@ -54,36 +67,56 @@
                     구글폼을 이용한 1차 면접과 비대면(ex. 줌)을 통한 2차 면접을 진행합니다.
                 </p>
                 <div class="schedule_container">
+                    Lorem Ipsum is simply dummy text of the printing and typesetting industry. <br>
+                    Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, <br>
+                    when an unknown printer took a galley of type and scrambled it to make a type specimen book. <br>
+                    It has survived not only five centuries, <br>
+                    but also the leap into electronic typesetting, <br>
+                    remaining essentially unchanged. <br>
+                    It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, <br>
+                    and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum. <br>
+                    Lorem Ipsum is simply dummy text of the printing and typesetting industry. <br>
+                    Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, <br>
+                    when an unknown printer took a galley of type and scrambled it to make a type specimen book. <br>
+                    It has survived not only five centuries, <br>
+                    but also the leap into electronic typesetting, <br>
+                    remaining essentially unchanged. <br>
+                    It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, <br>
+                    and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum. <br>
                     2월 21일 - 3월 11일 : 서류 모집 기간 <br>
                     3월 14일 - 3월 18일 : 면접 <br>
                     3월 20일 이후 멋쟁이 사자처럼 활동 시작 <br>
                 </div>
             </div>
-
+                
             <div class="video">
                 <p class="title">소개영상</p>
+                <p>소개영상이 들어갑니다.</p>
             </div>
 
-            <div class="rule">
-                <p class="title">멋쟁이 사자처럼 규칙</p>
-                <p>
-                    멋쟁이 사자처럼 10기로 함께 활동하고 싶다면 <br>
-                    아래 규칙을 정독한 후에 지원서를 작성해주시길 바랍니다 ! <br>
-                    <br>
-                    멋쟁이 사자처럼 성공회대 규칙 <br>
-                    (다운로드)
-                </p>
-            </div>
-
-            <div class="curriculum">
-                <p class="title">멋쟁이 사자처럼 커리큘럼</p>
-                <p>
-                    Html/Css, Javascript, Python, Django를 기반으로 활동합니다 <br>
-                    자세한 내용이 궁금하다면 아래 커리큘럼을 확인해주세요. <br>
-                    <br>
-                    멋쟁이 사자처럼 성공회대 커리큘럼 <br>
-                    (다운로드)
-                </p>
+            <div class="must">
+                <div class="rule">
+                    <p class="title">멋쟁이 사자처럼 규칙</p>
+                    <p>
+                        멋쟁이 사자처럼 10기로 함께 활동하고 싶다면 <br>
+                        아래 규칙을 정독한 후에 지원서를 작성해주시길 바랍니다 ! <br>
+                    </p>
+                    <p class="download">
+                        멋쟁이 사자처럼 성공회대 규칙 <br>
+                        (다운로드)
+                    </p>
+                </div>
+                <div class="curriculum">
+                    <p class="title">멋쟁이 사자처럼 커리큘럼</p>
+                    <p>
+                        Html/Css, Javascript, Python, Django를 기반으로 활동합니다 <br>
+                        자세한 내용이 궁금하다면 아래 커리큘럼을 확인해주세요. <br>
+                    </p>
+                    <p class="download">
+                        멋쟁이 사자처럼 성공회대 규칙 <br>
+                        (다운로드)
+                    </p>
+                </div>
             </div>
         </div>
 
