--- a/prwebsite/templates/lion/index.html
+++ b/prwebsite/templates/lion/index.html
@@ -90,8 +90,9 @@
             </div>
                 
             <div class="video">
-                <p class="title">소개영상</p>
-                <p>소개영상이 들어갑니다.</p>
+                <video src="static/info/likelion_skhu.mp4" controls>
+                    소개영상입니다.
+                </video>
             </div>
 
             <div class="must">
