--- a/prwebsite/static/lion/css/slide.css
+++ b/prwebsite/static/lion/css/slide.css
@@ -1,5 +1,14 @@
+.slide {
+    text-align: center;
+}
+
 .slide-li {
     list-style-type:none;
+}
+
+.slide span {
+    font-size: 15pt;
+    color: gray;
 }
 
 .slide-container {
