--- a/prwebsite/templates/lion/index.html
+++ b/prwebsite/templates/lion/index.html
@@ -16,12 +16,11 @@
 
 <body>
     <header>
-        멋쟁이 사자처럼
+        <p class = "header_text">Like lion</p>
     </header>
 
     <div id='wrapper'>
         <div class="leo">
-            <!-- 사자 별자리 구간 :: 민정님 -->
             <p>사자 그림 자체를 어둡게 하고, 그 위에 별자리를 두고, 각 별마다 옆에 글자가 나오는 방식으로 제작 예정</p>
         </div>
 
@@ -88,7 +87,7 @@
         </div>
 
         <div class="slide">
-            <!-- 슬라이드 :: 은혜님 -->
+            
         </div>
 
         <div class="event">
@@ -96,36 +95,17 @@
         </div>
 
         <div class="madein">
-            <div class="line_deplacement">
-                <div id="box">
-                    <img src="{% static '신아.jpg' %}" width="120" height="120">
-                    <div id="hide_bar">시나몽</div>
-                </div>
-                <div id="box">
-                    <img src="신아.jpg" width="120" height="120">
-                    <div id="hide_bar">김예지</div>
-                </div>
-                <div id="box">
-                    <img src="신아.jpg" width="120" height="120">
-                    <div id="hide_bar">주영빈</div>
-                </div>
-            </div>
-            <div class="line_deplacement">
-                <div id="box">
-                    <img src="신아.jpg" width="120" height="120">
-                    <div id="hide_bar">김은혜</div>
-                </div>
-                <div id="box">
-                    <img src="신아.jpg" width="120" height="120">
-                    <div id="hide_bar">강민정</div>
-                </div>
-            </div>
         </div>
     </div>
 
     <footer>
-        <hr width="50%" size="3px" color="#DE964A">
-        <p>블라블라블라</p>
+        <img class="footer_img" src="{% static 'lion/img/5_footer.png' %}">
+        <br>
+        <span class="H_orange">HACK YOUR LIFE</span>
+        <p class="footlion">멋쟁이 사자처럼</p>
+        <p class = "number"><span class = "orange">PHONE NUMBER</span> 010-4122-2746</p>
+        <p class = "insta"><span class = "orange">INSTAGRAM</span> @likelion_skhu</p>
+        <br>
     </footer>
 
 
