--- a/prwebsite/static/lion/css/event.css
+++ b/prwebsite/static/lion/css/event.css
@@ -1,28 +1,84 @@
-#hide_bar{
-    background-color:orange;
-    opacity : 0.6;
-    width : 120px;
-    height: 120px;
-    border-radius: 50%;
+.event{
+    margin : 200px auto;
     text-align: center;
-    display : table-cell;
-    vertical-align: middle;
-
 }
-#box {
-    width : 120px;
-    height: 120px;
-    overflow: hidden;
-}
-.transBoxIn{
-    transform : translateY(-125px);
-    transition : 0.3s ease;
-}
-.transBoxOut{
-    transform : translateY(125px);
-    transition : 0.3s ease;
-}
-.line_deplacement{
+.all_in_one{
+    width : 830px;
     display: flex;
     justify-content: space-evenly;
+    align-items: center;
+    border-radius: 15px;
+    position: relative;
+    background-color:white;
+    margin : 0 auto;
+    color: black;
+}
+.my_slider_box{
+    width : 600px;
+    height: 350px;
+    position : relative;
+    overflow:hidden;
+}
+.my_slider_list{
+    width : 1800px;
+    position : absolute;
+}
+.slider_content{
+    width: 600px;
+    height: 350px;
+    float:left;
+    display:flex;
+    align-items: center;
+    justify-content: center;
+    font-size : 25px;
+}
+.slider_header{
+    width : 830px;
+    height: 30px;
+    background-color: orange;
+    border-radius:  10px 10px 0px 0px;
+    position : absolute;
+    top : 0px;
+    display : flex;
+    align-items: center;
+}
+.color_circle{
+    border-radius: 50%;
+    width : 15px;
+    height: 15px;
+    display: flex;
+    background-color: white;
+    margin-left: 7px;
+}
+.slider_header div:first-child{
+    background-color : red;
+}
+
+.slider_header div:nth-child(2){
+    background-color : #FFD95F;
+}
+.slider_header div:last-child{
+    background-color : #53DC48;
+}
+.moving_header_bar{
+    border-radius: 10px;
+    width : 830px;
+    height: 10px;
+    background-color: white;
+    display: flex;
+    align-items: center;
+    margin : 50px auto;
+}
+.moving_header_bar_ofdot{
+    background-color: orange ;
+    width : 15px;
+    height: 15px;
+    border-radius: 50%;
+    position: relative;
+}
+.pre_button:hover{
+    cursor: pointer;
+}
+.next_button:hover{
+    cursor: pointer;
 }
