--- a/prwebsite/templates/lion/index.html
+++ b/prwebsite/templates/lion/index.html
@@ -10,6 +10,7 @@
     <link rel="stylesheet" href="{% static 'lion/css/madein.css' %}">
     <link rel='stylesheet' href="{% static 'lion/css/index.css'%}"> 
     <link rel='stylesheet' href="{% static 'lion/css/slide.css'%}"> 
+    <link rel='stylesheet' href="{% static 'lion/css/info.css'%}"> 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+KR&display=swap" rel="stylesheet">
