:ambulance:Correct typos

--- a/prwebsite/templates/lion/index.html
+++ b/prwebsite/templates/lion/index.html
@@ -70,7 +70,7 @@
             <div class="recruit" id="leo_RE">
                 <p class="title">모집대상</p>
                 <div class="recruit_box">
-                    <img id="skhu2" src="{% static 'lion/img/info/shku2.jpeg' %}" alt="멋사 성공회대 사진 2">
+                    <img id="skhu2" src="{% static 'lion/img/info/skhu2.jpeg' %}" alt="멋사 성공회대 사진 2">
                     <p>
                         전공자/비전공자 상관없이 나의 아이디어를 웹 서비스를 구현해보고 싶은 누구나! <br>
                         해커톤과 넥슨 MOD를 통해 개발 경험을 쌓아보고 싶은 누구나! <br>
