--- a/prwebsite/templates/lion/index.html
+++ b/prwebsite/templates/lion/index.html
@@ -50,34 +50,38 @@
 
         <div class="info">
             <div class="introduce" id="leo_IN">
-                <p>멋쟁이 사자처럼이 무엇인가요?</p>
                 <div class="info_box">
                     <img id="skhu1" src="{% static 'lion/img/info/skhu1.jpeg' %}" alt="멋사 성공회대 사진 1">
-                    <p>
-                        "HACK YOUR LIFE 내 아이디어를 내 손으로 실현한다"의 가치 아래에서 시작된 전국 연합 동아리 멋쟁이 사자처럼. <br>
-                        <br>
-                        멋쟁이 사자처럼은 자신이 생각했던 아이디어를 구체화하고 프로그래밍 교육을 통해 웹서비스 구현을 목표로 활동하는 전국 연합동아리입니다.
-                        웹 프로그래밍에 대해 전혀 모르는 비전공자도, 코딩을 처음 접해보는 신입생도 멋쟁이가 될 수 있도록 사자처럼 강하게 키워드리겠습니다. <br>
-                        <br>
-                        우리 멋쟁이 사자처럼 성공회대학교는 2022년을 함께 나아갈 아기사자를 찾고 있습니다. <br>
-                        멋쟁이 사자처럼에서 함께 성장할 아기사자를 모집합니다 !
-                    </p>
+                    <div class="intro_container">
+                        <p class="title">멋쟁이 사자처럼이 무엇인가요?</p>
+                        <p>
+                            "HACK YOUR LIFE 내 아이디어를 내 손으로 실현한다"의 가치 아래에서 시작된 전국 연합 동아리 멋쟁이 사자처럼. <br>
+                            <br>
+                            멋쟁이 사자처럼은 자신이 생각했던 아이디어를 구체화하고 프로그래밍 교육을 통해 웹서비스 구현을 목표로 활동하는 전국 연합동아리입니다.
+                            웹 프로그래밍에 대해 전혀 모르는 비전공자도, 코딩을 처음 접해보는 신입생도 멋쟁이가 될 수 있도록 사자처럼 강하게 키워드리겠습니다. <br>
+                            <br>
+                            우리 멋쟁이 사자처럼 성공회대학교는 2022년을 함께 나아갈 아기사자를 찾고 있습니다. <br>
+                            멋쟁이 사자처럼에서 함께 성장할 아기사자를 모집합니다 !
+                        </p>
+                    </div>
                 </div>
                 <img id="info_star" src="{% static 'lion/img/info/star.png' %}" alt="별">
                 </div>
             </div>
 
             <div class="recruit" id="leo_RE">
-                <p class="title">모집대상</p>
                 <div class="recruit_box">
-                    <img id="skhu2" src="{% static 'lion/img/info/shku2.jpeg' %}" alt="멋사 성공회대 사진 2">
-                    <p>
-                        전공자/비전공자 상관없이 나의 아이디어를 웹 서비스를 구현해보고 싶은 누구나! <br>
-                        해커톤과 넥슨 MOD를 통해 개발 경험을 쌓아보고 싶은 누구나! <br>
-                        Django와 Python을 통한 웹 서비스를 구축해보고 싶은 누구나! <br>
-                        <br>
-                        멋쟁이 사자처럼 성공회대학교가 기다리고 있습니다 🦁
-                    </p>
+                    <img id="skhu2" src="{% static 'lion/img/info/skhu2.jpeg' %}" alt="멋사 성공회대 사진 2">
+                    <div class="recruit_container">
+                        <p class="title">모집대상</p>
+                        <p>
+                            전공자/비전공자 상관없이 나의 아이디어를 웹 서비스를 구현해보고 싶은 누구나! <br>
+                            해커톤과 넥슨 MOD를 통해 개발 경험을 쌓아보고 싶은 누구나! <br>
+                            Django와 Python을 통한 웹 서비스를 구축해보고 싶은 누구나! <br>
+                            <br>
+                            멋쟁이 사자처럼 성공회대학교가 기다리고 있습니다 🦁
+                        </p>
+                    </div>
                 </div>
             </div>
 
