피드백수용하여수정함

--- a/prwebsite/static/lion/css/leo.css
+++ b/prwebsite/static/lion/css/leo.css
@@ -9,23 +9,23 @@
 }
 
 .leo p {
-    font-size: 2.5rem;
+    font-size: 2rem;
     line-height: 0.04em; /*문장 세로 간격*/
-    padding-left: 10%;
+    padding-left: 7%;
 }
 
 .leo hr {
-    width: 30em;
+    width: 25em;
     height: 0.2em;
     border: none;
     background-color: #FF9E1B;
 }
 
 #leo_search {
-    width: 9%;
+    width: 7%;
     height: auto;
     position: absolute;
-    top: 40%;
+    top: 45%;
     left: 5%;
 }
 
@@ -186,8 +186,8 @@
     position: absolute;
     width: 100%;
     height: 50%;
-    padding-top: 10%;
-    bottom: 10%;
+    padding-top: 17%;
+    bottom: 1%;
     color: rgb(255, 255, 255);
     overflow: hidden;
     border-right: .10em solid orange;
@@ -224,8 +224,8 @@
     position: absolute;
     width: 100%;
     height: 50%;
-    padding-top: 10%;
-    bottom: 10%;
+    padding-top: 17%;
+    bottom: 1%;
     color: rgb(255, 255, 255);
     overflow: hidden;
     border-right: .10em solid orange;
@@ -248,8 +248,8 @@
     position: absolute;
     width: 100%;
     height: 50%;
-    padding-top: 10%;
-    bottom: 10%;
+    padding-top: 17%;
+    bottom: 1%;
     color: rgb(255, 255, 255);
     overflow: hidden;
     border-right: .10em solid orange;
@@ -272,8 +272,8 @@
     position: absolute;
     width: 100%;
     height: 50%;
-    padding-top: 10%;
-    bottom: 10%;
+    padding-top: 17%;
+    bottom: 1%;
     color: rgb(255, 255, 255);
     overflow: hidden;
     border-right: .10em solid orange;
@@ -297,7 +297,7 @@
     width: 100%;
     height: 50%;
     padding-top: 10%;
-    bottom: 10%;
+    bottom: 1%;
     color: rgb(255, 255, 255);
     overflow: hidden;
     border-right: .10em solid orange;
@@ -321,7 +321,7 @@
     width: 100%;
     height: 50%;
     padding-top: 10%;
-    bottom: 10%;
+    bottom: 1%;
     color: rgb(255, 255, 255);
     overflow: hidden;
     border-right: .10em solid orange;
@@ -345,8 +345,8 @@
     position: absolute;
     width: 100%;
     height: 50%;
-    padding-top: 10%;
-    bottom: 10%;
+    padding-top: 14%;
+    bottom: 1%;
     color: rgb(255, 255, 255);
     overflow: hidden;
     border-right: .10em solid orange;
@@ -365,12 +365,12 @@
   }
   
 #leo_eight::before {
-    content: "개발진들";
+    content: "운영진들";
     position: absolute;
     width: 100%;
     height: 50%;
-    padding-top: 10%;
-    bottom: 10%;
+    padding-top: 17%;
+    bottom: 1%;
     color: rgb(255, 255, 255);
     overflow: hidden;
     border-right: .10em solid orange;
@@ -393,8 +393,8 @@
     position: absolute;
     width: 100%;
     height: 50%;
-    padding-top: 10%;
-    bottom: 10%;
+    padding-top: 17%;
+    bottom: 1%;
     color: rgb(255, 255, 255);
     overflow: hidden;
     border-right: .10em solid orange;
