--- a/prwebsite/templates/lion/index.html
+++ b/prwebsite/templates/lion/index.html
@@ -55,12 +55,15 @@
                     <div class="intro_container">
                         <p class="title">멋쟁이 사자처럼이 무엇인가요?</p>
                         <p>
-                            "HACK YOUR LIFE 내 아이디어를 내 손으로 실현한다"의 가치 아래에서 시작된 전국 연합 동아리 멋쟁이 사자처럼. <br>
+                            "HACK YOUR LIFE 내 아이디어를 내 손으로 실현한다"의 가치 아래에서 시작된 <br>
+                            전국 연합 동아리 멋쟁이 사자처럼. <br>
                             <br>
-                            멋쟁이 사자처럼은 자신이 생각했던 아이디어를 구체화하고 프로그래밍 교육을 통해 웹서비스 구현을 목표로 활동하는 전국 연합동아리입니다.
-                            웹 프로그래밍에 대해 전혀 모르는 비전공자도, 코딩을 처음 접해보는 신입생도 멋쟁이가 될 수 있도록 사자처럼 강하게 키워드리겠습니다. <br>
+                            자신이 생각했던 아이디어를 구체화하고 프로그래밍 교육을 통해 <br>
+                            웹서비스 구현을 목표로 활동하는 전국 연합동아리입니다. <br>
+                            프로그래밍에 대해 전혀 모르는 비전공자도, 신입생도 환영합니다. <br>
                             <br>
-                            우리 멋쟁이 사자처럼 성공회대학교는 2022년을 함께 나아갈 아기사자를 찾고 있습니다. <br>
+                            우리 멋쟁이 사자처럼 성공회대학교는 <br>
+                            2022년을 함께 나아갈 아기사자를 찾고 있습니다. <br>
                             멋쟁이 사자처럼에서 함께 성장할 아기사자를 모집합니다 !
                         </p>
                     </div>
@@ -71,17 +74,17 @@
 
             <div class="recruit" id="leo_RE">
                 <div class="recruit_box">
-                    <img id="skhu2" src="{% static 'lion/img/info/skhu2.jpeg' %}" alt="멋사 성공회대 사진 2">
                     <div class="recruit_container">
                         <p class="title">모집대상</p>
                         <p>
-                            전공자/비전공자 상관없이 나의 아이디어를 웹 서비스를 구현해보고 싶은 누구나! <br>
-                            해커톤과 넥슨 MOD를 통해 개발 경험을 쌓아보고 싶은 누구나! <br>
-                            Django와 Python을 통한 웹 서비스를 구축해보고 싶은 누구나! <br>
-                            <br>
+                            ☝🏻 전공자/비전공자 상관없이 나의 아이디어를 웹 서비스를 구현해보고 싶은 누구나! <br>
+                            ✌🏻 해커톤과 넥슨 MOD를 통해 개발 경험을 쌓아보고 싶은 누구나! <br>
+                            👌🏻 Django와 Python을 통한 웹 서비스를 구축해보고 싶은 누구나! <br>
+                            <br><br>
                             멋쟁이 사자처럼 성공회대학교가 기다리고 있습니다 🦁
                         </p>
                     </div>
+                    <img id="skhu2" src="{% static 'lion/img/info/skhu2.jpeg' %}" alt="멋사 성공회대 사진 2">
                 </div>
             </div>
 
