hide the scroll

--- a/prwebsite/static/lion/css/index.css
+++ b/prwebsite/static/lion/css/index.css
@@ -2,6 +2,11 @@ body{
     background-color: black;
     font-family: 'Noto Sans KR', sans-serif;
     color:white;
+    -ms-overflow-style: none;
+    scrollbar-width: none;
+}
+body::-webkit-scrollbar{
+    display: none;
 }
 
 #wrapper{
@@ -24,6 +29,7 @@ header{
     width: 100%;
     top: 0;
     left: 0;
+    height: 55px;
 }
 
 .header_text{
