--- a/prwebsite/templates/lion/index.html
+++ b/prwebsite/templates/lion/index.html
@@ -53,9 +53,9 @@
                 <div class="info_box">
                     <img id="skhu1" src="{% static 'lion/img/info/skhu1.jpeg' %}" alt="멋사 성공회대 사진 1">
                     <div class="intro_container">
-                        <p class="title">멋쟁이 사자처럼이 무엇인가요?</p>
+                        <p class="title">🦁"멋쟁이 사자처럼"이 무엇인가요?</p>
                         <p>
-                            "HACK YOUR LIFE 내 아이디어를 내 손으로 실현한다"의 가치 아래에서 시작된 <br>
+                            "<span class = "orange">HACK YOUR LIFE</span> 내 아이디어를 내 손으로 실현한다"의 가치 아래에서 시작된 <br>
                             전국 연합 동아리 멋쟁이 사자처럼. <br>
                             <br>
                             자신이 생각했던 아이디어를 구체화하고 프로그래밍 교육을 통해 <br>
